TODO
====

Add support for StellarNet spectrometers and Bentham spectrometers.
Add a generic reader of files into a collection of spectra.
Add alternative reader of TUV output files into a collection of spectra.
Add test cases for new functions for exchange of foreign data (currently tested 
through examples in vignette).

photobiologyInOut 0.4.15
========================

Add read_qtuv_txt() to read spectral data output files from the on-line
Quick TUV calculator.

photobiologyInOut 0.4.14
========================

Implement class coercion methods ("as." methods) to complement earlier functions,
tracking 'photobiology' 0.9.20.
Move coercion methods from and to matrix objects to 'photobiology' 0.9.20.
Update to track API changes in 'colorSpec' 0.7-3.
Translate vignette to Rmarkdown.

photobiologyInOut 0.4.13
========================

Add function read_FReD_csv() (read files flower reflectance database).
Add function read_ASTER_txt() (read files ASTER materials reflectance database).
Revise function read_licor_prn() to accept transmittance and reflectance spectra
in addition to energy and photon irradiance spectra.
Improve handling of 'label' by using only the base name of files and appending
user supplied label text.
Change location of external data used in vignettes.

photobiologyInOut 0.4.12
========================

Fix CITATION file.
Add function read_uvspec_disort(), rename read_libradtran_vesa() to
read_uvspec_disort_vesa().

photobiologyInOut 0.4.11
========================

Edit read_licor_prn() to work around a bug in readr::read_table() that results
in missread data (wrong numbers).
Add read_csi_dat() to read data saved from modern Campbell Scientific loggers.

photobiologyInOut 0.4.10
========================

Make compatible with upcoming version of package 'lubridate' (pull request by
vspinu NA).
Add function read_avaspec_xls() which can import spectral data from Excel
files exported from Avantes software.