@@ -40,6 +40,7 @@ export(read_oo_ssdata)
 export(read_oo_ssirrad)
 export(read_qtuv_txt)
 export(read_tuv_usrout)
+export(read_tuv_usrout2mspct)
 export(read_uvspec_disort)
 export(read_uvspec_disort_vesa)
 export(rspec2mspct)
